--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -3,18 +3,23 @@
     <div class="about-me-text">
         <h2>About me</h2>
         <span>
-            Hi, I am a Front-end deverloper based in München, Germany(....)Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut auctor sem non tempus convallis. Integer et justo vitae urna finibus eleifend sit amet porttitor sapien. Donec sollicitudin massa vel lorem vestibulum efficitur.
+            Hi, I am a web developer from Dortmund, Germany. My interest into the IT world started when I took a 
+            programming class at University and started out by creating my first small personal websites over the years, 
+            as well as developing simple games with JavaScript.
         </span>
         <div class="sub-category">
             <img class="img-bulb" src="assets/img/bulb.png">
             <span>
-                Some personal thing to share(...) Donec ut imperdiet diam, et convallis neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                When I decided to take my skills to the next level, I joined the Developer Akademie 
+                to learn front-end development, building professional business apps and working on projects in small teams.
             </span>
         </div>
         <div class="sub-category">
             <img class="img-puzzle" src="assets/img/puzzle.png">
             <span>
-                Some personal thing to share(...) Donec ut imperdiet diam, et convallis neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                What helped me a lot to grow as a web developer, is my background as a musician. It takes a lot of creativity, 
+                focus and a structured approach to master an instrument, which are skills that have been very useful on my journey.
+
             </span>
         </div>
     </div>
