--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -6,7 +6,7 @@
     <img class="img-blurred" src="assets/img/contact-blurred.png">
     <img class="img-arrow" (click)="scrollToSection('menu')" src="assets/img/arrow-up.png">
     <div class="contact-div-text">
-        <h3>Got a problem to solve?</h3>
+        <h3>How can I help you?</h3>
         <span>
             Contact me through this form, I am interested in hearing from you, 
             knowing your ideas and contributing to your projects with my work.
