--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,10 @@
 <div class="window">
 <footer>
     <div class="links">
-        <a (click)="openDialog('impressum')" target="_blank">Impressum</a>
+        <a class="hover-underline-animation" (click)="openDialog('impressum')" target="_blank">Impressum</a>
         <span>|</span>
         <div></div>
-        <a (click)="openDialog('legal-notice')" target="_blank">Legal Notice</a>
+        <a class="hover-underline-animation" (click)="openDialog('legal-notice')" target="_blank">Legal Notice</a>
     </div>
     <div class="copyright">© Marco von Baumbach {{ currentYear }}</div>
     <div class="icons">
