--- a/src/app/icon-bar/icon-bar.component.html
+++ b/src/app/icon-bar/icon-bar.component.html
@@ -7,7 +7,7 @@
         <span>marco.vonbaumbach@gmx.de</span>
     </div>
     <div class="icon-bar-right">
-        <span (click)="scrollToSection('contact')">Scroll down</span>
+        <span class="hover-underline-animation" (click)="scrollToSection('contact')">Scroll down</span>
         <img (click)="scrollToSection('contact')" src="assets/img/arrow-down.png">
     </div>
 </div>
