--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,5 +1,6 @@
 <div class="my-skills-section">
     <img class="img-blurred" src="assets/img/my-skills-blurred.png">
+    <button class="buttons button-blue show-mobile" (click)="scrollToSection('contact')">Get in touch</button>
     <div class="skill-icons">
         <img src="assets/img/skills/Angular.png">
         <img src="assets/img/skills/Typescript.png">
@@ -15,9 +16,9 @@
     <div class="my-skills-text">
         <h2>My Skills</h2>
         <span>
-            I have grown my frontend developments skills that have allowed me to create different real projects.
+            I have grown my frontend development skills that have allowed me to create different real projects.
         </span>
-        <button class="buttons button-blue" (click)="scrollToSection('contact')">Get in touch</button>
+        <button class="buttons button-blue show-desktop" (click)="scrollToSection('contact')">Get in touch</button>
     </div>
     <div class="horizontal-line"></div>
 </div>
