--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -30,7 +30,7 @@
         <h4>JavaScript | HTML | CSS</h4>
         <span>
             A simple Jump-and-Run game based on an object-oriented approach. 
-            Help Pepe to find coins and salsa bottles to fight against the chicken.
+            Help Pepe to collect coins and throw salsa bottles against the big chicken to defeat it.
         </span>
         <div class="button-div button-div-reverse">
             <button class="buttons button-violett" (click)="openElPolloLoco()">Live test</button>
@@ -46,7 +46,7 @@
         <h3>Pokedex</h3>
         <h4>JavaScript | HTML | CSS | API</h4>
         <span>
-            Based on the PokéAPI a simple library that provides and catalogues pokemon information.
+            Based on the PokéAPI. A simple library that provides and catalogues pokemon information.
         </span>
         <div class="button-div">
             <button class="buttons button-violett" (click)="openPokedex()">Live test</button>
