--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -5,10 +5,9 @@
     <div class="span-name">
         <span>Marco von Baumbach</span>
         <p>FRONTEND DEVELOPER</p>
-        <button class="buttons button-blue" (click)="scrollToSection('contact')">Let's talk!</button>
+        <button class="buttons button-blue show-desktop" (click)="scrollToSection('contact')">Let's talk!</button>
     </div>
-
     <app-icon-bar></app-icon-bar>
-
+    <button class="buttons button-blue show-mobile" (click)="scrollToSection('contact')">Let's talk!</button>
     <img class="curved-background" src="assets/img/curved-background.png">
 </header>
