--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -5,11 +5,19 @@ header {
     gap: 50px;
     z-index: 2;
 
+    @media (max-width: 960px) {
+        gap: 5px;   
+    }
+
     div {
         width: 50px;
         height: 0;
         border: 4px solid #4B47FF;
         margin-bottom: 30px;
+        @media (max-width: 960px) {
+            width: 12px;   
+            margin-bottom: 35px;  
+        }
     }
 }
 
@@ -21,6 +29,14 @@ header {
     padding-left: 100px;
     padding-right: 100px;
     padding-bottom: 200px;
+
+    @media (max-width: 960px) {
+        flex-direction: column;  
+        margin-top: 35px;
+        padding-left: 25px;
+        padding-right: 25px;
+        padding-bottom: 35px;    
+    }
 
     form {
         display: flex;
@@ -37,6 +53,17 @@ header {
         @media (max-width: 1400px) {
             width: 30vw;
         }
+
+        @media (max-width: 960px) {
+            width: unset;
+            max-width: 617px;
+            padding-top: 35px;
+            padding-bottom: 150px;
+
+            button {
+                font-size: 18px !important;
+            }
+        }
     }
 }
 
@@ -45,6 +72,11 @@ header {
     height: 700px;
     top: 250px;
     left: 0;
+
+    @media (max-width: 960px) {
+        height: 400px;
+        top: 600px;
+    }
 }
 
 .img-arrow {
@@ -53,11 +85,19 @@ header {
     right: 100px;
     border: 2px solid white;
     border-radius: 50%;
+    z-index: 5;
     cursor: pointer;
     transition: all 125ms ease-in-out;
+
     &:hover {
         transition: all 125ms ease-in-out;
-        opacity: 0.5;
+        transform: scale(1.1);
+        opacity: 0.75;
+    }
+
+    @media (max-width: 960px) {
+        bottom: 48px;
+        right: 24px;
     }
 }
 
@@ -99,6 +139,9 @@ header {
         font-size: 32px;
         color: #FFFFFF;
         padding-bottom: 35px;
+        @media (max-width: 960px) {
+            font-size: 23px;   
+        }
     }
 
     span {
