--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -17,6 +17,13 @@ footer {
     border-top: 4px solid #00BEE8;
     background: #141D2F;
     z-index: 3;
+
+    @media (max-width: 960px) {
+        flex-direction: column-reverse;
+        justify-content: space-around;
+        padding-left: 25px;
+        padding-right: 25px;
+    }
 }
 
 
@@ -26,17 +33,23 @@ footer {
     font-weight: 400;
     font-size: 23px;
     color: #FFFFFF;
+    @media (max-width: 400px) {
+        font-size: 16px;
+    }
 }
 
 .icons {
     display: flex;
     gap: 42px;
+
     img {
         cursor: pointer;
         transition: all 125ms ease-in-out;
+
         &:hover {
             transition: all 125ms ease-in-out;
-            opacity: 0.5;
+            transform: scale(1.1);
+            opacity: 0.75;
         }
     }
 
@@ -55,9 +68,11 @@ footer {
     color: #FFFFFF;
     text-decoration: none;
 
-    a:hover {
-        cursor: pointer;
-        opacity: 0.5;
+    a {
+        &:hover {
+            cursor: pointer;
+            opacity: 0.75;
+        }
     }
 
     div {
@@ -79,4 +94,16 @@ footer {
             border: 0.5px solid white;
         }
     }
+
+    @media (max-width: 960px) {
+        flex-direction: row;
+        span {
+            display: unset;
+        }
+
+        div {
+            display: none;
+        }
+    }
 }
+
