--- a/src/app/icon-bar/icon-bar.component.scss
+++ b/src/app/icon-bar/icon-bar.component.scss
@@ -14,6 +14,10 @@
         font-weight: 400;
         font-size: 23px;
         color: #FFFFFF;
+
+        @media (max-width: 960px) {
+            display: none;
+        }
     }
 }
 
@@ -28,8 +32,13 @@
         transition: all 125ms ease-in-out;
         &:hover {
             transition: all 125ms ease-in-out;
-            opacity: 0.5;
+            transform: scale(1.1);
+            opacity: 0.75;
         }
+    }
+
+    @media (max-width: 960px) {
+        gap: 10vw;
     }
 }
 
@@ -42,7 +51,8 @@
         transition: all 125ms ease-in-out;
         &:hover {
             transition: all 125ms ease-in-out;
-            opacity: 0.5;
+            transform: scale(1.1);
+            opacity: 0.75;
         }
     }
     span {
@@ -52,8 +62,12 @@
         transition: all 125ms ease-in-out;
         &:hover {
             transition: all 125ms ease-in-out;
-            opacity: 0.5;
+            opacity: 0.75;
         }
+    }
+
+    @media (max-width: 960px) {
+        display: none;
     }
 }
 
@@ -61,4 +75,7 @@
     width: 100px;
     height: 0px;
     border: 4px solid #4B47FF;
+    @media (max-width: 960px) {
+        width: 22vw;
+    }
 }
