--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -12,6 +12,10 @@ header {
         width: 100%;
         margin-bottom: 30px;
     }
+
+    @media (max-width: 960px) {
+        gap: 16px;
+    }
 }
 
 .no-color {
@@ -35,6 +39,12 @@ header {
     font-size: 16px;
     color: #FFFFFF;
     text-align: center;
+
+    @media (max-width: 960px) {
+        padding-left: 25px;
+        padding-right: 25px;
+        margin-bottom: 35px;
+    }
 }
 
 .project-img {
@@ -43,15 +53,17 @@ header {
     justify-content: center;
     align-items: flex-end;
     margin-bottom: 150px;
+
+    @media (max-width: 960px) {
+        flex-direction: column !important;
+        align-items: center;
+    }
 }
 
 .project-content {
     padding-left: 35px;
     width: 513px;
-
-    @media (max-width: 1250px) {
-        padding-left: 0;
-    }
+    z-index: 2;
 
     h3 {
         font-family: 'Poppins';
@@ -80,6 +92,13 @@ header {
         font-size: 16px;
         color: #FFFFFF;
     }
+
+    @media (max-width: 960px) {
+        padding-left: 25px !important;
+        padding-right: 25px !important;
+        max-width: 513px;
+        width: unset;
+    }
 }
 
 .button-div {
@@ -90,11 +109,29 @@ header {
     @media (max-width: 1250px) {
         gap: 40px;
     }
+
+    @media (max-width: 960px) {
+        button {
+            font-size: 18px !important;
+        }
+    }
+}
+
+.button-div-reverse {
+    justify-content: flex-end;
+
+    @media (max-width: 960px) {
+        justify-content: flex-start;
+    }
 }
 
 .project-reverse {
     flex-direction: row-reverse;
     text-align: right;
+
+    @media (max-width: 960px) {
+        text-align: left;
+    }
 }
 
 .content-reverse {
@@ -104,10 +141,6 @@ header {
     @media (max-width: 1250px) {
         padding-right: 0;
     }
-}
-
-.button-div-reverse {
-    justify-content: flex-end;
 }
 
 .img-violett {
@@ -125,6 +158,15 @@ header {
     .project-img {
         img {
             width: 480px;
+            height: auto;
+        }
+    }
+}
+
+@media (max-width: 400px) {
+    .project-img {
+        img {
+            width: 300px;
             height: auto;
         }
     }
