--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -154,6 +154,7 @@ header {
     }
 
     @media (max-width: 1200px) {
-        width: 400px;
+        max-width: 400px;
+        width: unset;
     }
 }
