--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -41,16 +41,17 @@
 
 <div class="project-img">
     <img class="img-violett" src="assets/img/portfolio-violett.png">
-    <img class="higher-index" src="assets/img/laptop-pokedex.png">
+    <img class="higher-index" src="assets/img/laptop-ringoffire.png">
     <div class="project-content">
-        <h3>Pokedex</h3>
-        <h4>JavaScript | HTML | CSS | API</h4>
+        <h3>Ring of Fire</h3>
+        <h4>JavaScript | Angular | Firebase | HTML | CSS</h4>
         <span>
-            Based on the PokéAPI. A simple library that provides and catalogues pokemon information.
+            A card game that let's you play online with your friends. 
+            It is a CRUD app that uses firebase as storage.
         </span>
         <div class="button-div">
-            <button class="buttons button-violett" (click)="openPokedex()">Live test</button>
-            <button class="buttons button-outline" (click)="githubPokedex()">Github</button>
+            <button class="buttons button-violett" (click)="openRingOfFire()">Live test</button>
+            <button class="buttons button-outline" (click)="githubRingOfFire()">Github</button>
         </div>
     </div>
 </div>
