--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,7 +32,7 @@ html {
     background-color: #00BEE8;
     transition: all 125ms ease-in-out;
     &:hover {
-        background-color: #1CE6B6;
+        background-color: #4B47FF;
         transition: all 125ms ease-in-out;
     }
 }
