--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -16,8 +16,10 @@
     }
 
     @media (max-width: 960px) {
+        margin-bottom: 0;
         margin-left: 25px;
         padding-right: 25px;
+        padding-top: 100px;
     }
 }
 
