--- a/src/app/icon-bar/icon-bar.component.scss
+++ b/src/app/icon-bar/icon-bar.component.scss
@@ -7,6 +7,10 @@
     justify-content: space-between;
     align-items: flex-end;
     z-index: 1;
+
+    @media (max-width: 960px) {
+        bottom: 16px;
+    }
     
     span {
         font-family: 'Poppins';
