--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -57,8 +57,8 @@
     display: flex !important;
     justify-content: center;
     align-items: center;
-    margin-top: 37px !important;
-    height: calc(100vh - 111px);
+    margin-top: 25px !important;
+    height: calc(100vh - 89px);
     width: 100vw;
     max-width: 100% !important;
     background: #414856;
@@ -86,5 +86,7 @@ button {
     .menu {
         padding-left: 25px;
         padding-right: 25px;
+        padding-top: 25px;
+        padding-bottom: 25px;
     }
 }
