--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -10,6 +10,7 @@
         flex-direction: column-reverse;
         gap: 35px;
         padding-left: 0;
+        padding-top: 100px;
     }
 }
 
@@ -17,7 +18,7 @@
 .skill-icons {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    
     img {
         padding-left: 70px;
         padding-right: 70px;
