--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -14,6 +14,7 @@ header {
     }
 
     @media (max-width: 960px) {
+        padding-top: 100px;
         gap: 16px;
     }
 }
@@ -41,6 +42,7 @@ header {
     text-align: center;
 
     @media (max-width: 960px) {
+        box-sizing: border-box;
         padding-left: 25px;
         padding-right: 25px;
         margin-bottom: 35px;
@@ -57,6 +59,7 @@ header {
     @media (max-width: 960px) {
         flex-direction: column !important;
         align-items: center;
+        margin-bottom: 100px;
     }
 }
 
@@ -98,6 +101,7 @@ header {
         padding-right: 25px !important;
         max-width: 513px;
         width: unset;
+        text-align: center;
     }
 }
 
@@ -111,6 +115,7 @@ header {
     }
 
     @media (max-width: 960px) {
+        justify-content: center;
         button {
             font-size: 18px !important;
         }
@@ -121,7 +126,7 @@ header {
     justify-content: flex-end;
 
     @media (max-width: 960px) {
-        justify-content: flex-start;
+        justify-content: center;
     }
 }
 
