--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -46,6 +46,7 @@
     }
 
     @media (max-width: 960px) {
+        justify-content: center;
         padding-left: 0;
         padding-right: 0;
         img {
