--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,5 +1,5 @@
 <div class="my-skills-section">
-    <img class="img-blurred" src="assets/img/my-skills-blurred.png">
+    <img class="img-blurred" src="assets/img/my-skills-blurred.webp">
     <button class="buttons button-blue show-mobile" (click)="scrollToSection('contact')">Get in touch</button>
     <div class="skill-icons">
         <img src="assets/img/skills/Angular.png">
