--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -7,7 +7,7 @@
 <span class="sub-headline">This page is a sample of my work - please feel free to try them out.</span>
 
 <div class="project-img">
-    <img src="assets/img/laptop-join.png">
+    <img src="assets/img/laptop-join.webp">
     <div class="project-content">
         <h3>Join</h3>
         <h4>JavaScript | HTML | CSS</h4>
@@ -24,7 +24,7 @@
 </div>
 
 <div class="project-img project-reverse">
-    <img src="assets/img/laptop-elpolloloco.png">
+    <img src="assets/img/laptop-elpolloloco.webp">
     <div class="project-content content-reverse">
         <h3>El Pollo Loco</h3>
         <h4>JavaScript | HTML | CSS</h4>
@@ -40,8 +40,8 @@
 </div>
 
 <div class="project-img">
-    <img class="img-violett" src="assets/img/portfolio-violett.png">
-    <img class="higher-index" src="assets/img/laptop-simplecrm.png">
+    <img class="img-violett" src="assets/img/portfolio-violett.webp">
+    <img class="higher-index" src="assets/img/laptop-simplecrm.webp">
     <div class="project-content">
         <h3>Simple CRM</h3>
         <h4>Angular | Firebase | Material | API</h4>
@@ -52,22 +52,6 @@
         <div class="button-div">
             <button class="buttons button-violett" (click)="openProject('crm')">Live test</button>
             <button class="buttons button-outline" (click)="openGithub('crm')">Github</button>
-        </div>
-    </div>
-</div>
-
-<div class="project-img project-reverse">
-    <img src="assets/img/laptop-pokedex.png">
-    <div class="project-content content-reverse">
-        <h3>Pokedex</h3>
-        <h4>JavaScript | HTML | CSS | API</h4>
-        <span>
-            This is a simple library based on the PokéAPI,
-             that provides and catalogues pokemon information.
-        </span>
-        <div class="button-div button-div-reverse">
-            <button class="buttons button-violett" (click)="openProject('pokedex')">Live test</button>
-            <button class="buttons button-outline" (click)="openGithub('pokedex')">Github</button>
         </div>
     </div>
 </div>
