--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -1,6 +1,6 @@
 <header>
-    <img class="photo-shadows" src="assets/img/photo-shadows.png">
-    <img class="profile-picture" src="assets/img/profile1.png">
+    <img class="photo-shadows" src="assets/img/photo-shadows.webp">
+    <img class="profile-picture" src="assets/img/profile1.webp">
     <div class="span-name">
         <div class="rotate-text">I am</div>
         <div class="text-div">
@@ -10,5 +10,5 @@
         </div>
     </div>
     <app-icon-bar></app-icon-bar>
-    <img class="curved-background" src="assets/img/curved-background.png">
+    <img class="curved-background" src="assets/img/curved-background.webp">
 </header>
