--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,5 +1,5 @@
 <div class="about-me-section">
-    <img class="img-blurred" src="assets/img/about-me-blurred.png">
+    <img class="img-blurred" src="assets/img/about-me-blurred.webp">
     <div class="about-me-text">
         <h2>About me</h2>
         <span>
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="about-me-image">
-        <img src="assets/img/profile2.png">
+        <img src="assets/img/profile2.webp">
         <div></div>
     </div>
 </div>
