--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,7 +3,7 @@
     <h2>Contact</h2>
 </header>
 <div class="contact-div">
-    <img class="img-blurred" src="assets/img/contact-blurred.png">
+    <img class="img-blurred" src="assets/img/contact-blurred.webp">
     <img class="img-arrow" (click)="scrollToSection('menu')" src="assets/img/arrow-up.png">
     <div class="contact-div-text">
         <h3>How can I help you?</h3>
