--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <div class="menu">
-    <img (click)="scrollToSection('menu')" src="assets/img/logo.png">
+    <img (click)="scrollToSection('menu')" src="assets/img/logo.webp">
     <div class="links">
         <a class="hover-underline-animation" (click)="scrollToSection('about-me')">About me</a>
         <a class="hover-underline-animation" (click)="scrollToSection('my-skills')">Skills</a>
