--- a/src/app/impressum/impressum.component.html
+++ b/src/app/impressum/impressum.component.html
@@ -6,7 +6,7 @@
     </p>
 
     <h3>Kontakt</h3>
-    <p>Telefon: 01771439883<br />
+    <p>Telefon: 0231 96360839<br />
         E-Mail: marco.vonbaumbach@gmx.de</p>
 
     <p>Quelle: <a
