--- a/src/app/legal-notice/legal-notice.component.html
+++ b/src/app/legal-notice/legal-notice.component.html
@@ -48,7 +48,7 @@
     Lessingstr. 40<br />
     44147 Dortmund</p>
 
-<p>Telefon: 01771439883<br />
+<p>Telefon: 0231 96360839<br />
     E-Mail: marco.vonbaumbach@gmx.de</p>
 <p>Verantwortliche Stelle ist die nat&uuml;rliche oder juristische Person, die allein oder gemeinsam mit
     anderen &uuml;ber die Zwecke und Mittel der Verarbeitung von personenbezogenen Daten (z.&nbsp;B. Namen,
